--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -22,20 +22,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-          cache: maven
-
-      - name: Build Initial with Maven
-        working-directory: ./initial
-        run: ./mvnw --batch-mode clean package
-
-      - name: Build Initial with Gradle
-        working-directory: ./initial
-        run: ./gradlew build
-
-      - name: Build Complete with Maven
-        working-directory: ./complete
-        run: ./mvnw --batch-mode clean package
 
       - name: Build Complete with Gradle
         working-directory: ./complete
-        run: ./gradlew build
+        run: ./gradlew build --no-daemon
+
+
