--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Build Complete with Gradle
         working-directory: ./complete
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build --no-daemon ./distZip
 
 
