--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -25,6 +25,10 @@ jobs:
 
       - name: Build Complete with Gradle
         working-directory: ./complete
-        run: ./gradlew build --no-daemon ./distZip
+        run: |
+          ./gradlew build --no-daemon ./distZip
 
-
+      - name: Log Build Size
+        run: |
+          FILE_SIZE=$(stat -c %s ./distZip/your-app.zip)
+          echo "File size: $FILE_SIZE bytes"
