--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
+	id "distribution"
 	id 'java'
 }
 
@@ -21,6 +22,14 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	// end::tests[]
 }
+
+distZip {
+	into(project.name) {
+		from "./complete"
+//		include "conf/**"
+	}
+}
+
 
 test {
 	useJUnitPlatform()
