--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -32,7 +32,7 @@ jobs:
         uses: prewk/s3-cp-action@v2
         with:
           aws_access_key_id: ${{ secrets.S3_ACCESS_KEY }}
-          aws_secret_access_key: ${{ secrets.S3_SECRET_ACCESS_SECRET }}
+          aws_secret_access_key: ${{ secrets.S3_ACCESS_KEY_SECRET }}
           source: build/distributions/spring-boot.zip
           dest: 's3://${{ secrets.S3_BUCKET_NAME}}/app-master.zip'
           aws_region: 'us-east-1'
