--- a/.github/workflows/continuous-integration-build.yml
+++ b/.github/workflows/continuous-integration-build.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
+#      - name: Get latest Git tag
+#        id: get_tag
+#        run: echo "::set-output name=tag::$(git describe --tags --abbrev=0)"
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -24,8 +28,8 @@ jobs:
           distribution: 'temurin'
 
       - name: Build Complete with Gradle
-        working-directory: ./complete
-        run: |
+#        working-directory: ./complete
+        run:
           ./gradlew --no-daemon distZip
 
       - name: Deploy to S3
@@ -33,6 +37,7 @@ jobs:
         with:
           aws_access_key_id: ${{ secrets.S3_ACCESS_KEY }}
           aws_secret_access_key: ${{ secrets.S3_ACCESS_KEY_SECRET }}
+#          cp build/distributions/spring-boot-$TAG.zip s3://your-bucket-name/
           source: build/distributions/spring-boot.zip
           dest: 's3://${{ secrets.S3_BUCKET_NAME}}/app-master.zip'
           aws_region: 'us-east-1'
