--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -1,7 +1,8 @@
 plugins {
+	id "application"
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
-	id "distribution"
+	id "org.graalvm.buildtools.native" version "0.9.19"
 	id 'java'
 }
 
@@ -25,16 +26,15 @@ dependencies {
 
 
 
-distZip {
-//	into(project.name) {
-//		from "./"
-//		archiveFileName = "${project.name}.zip"
-//		include "conf/**"
-//	}
-	from("./complete")
-}
 
 
 test {
 	useJUnitPlatform()
+}
+
+distZip {
+	into(project.name) {
+		from "."
+//		include "conf/**"
+	}
 }
