--- a/complete/build.gradle
+++ b/complete/build.gradle
@@ -2,7 +2,6 @@ plugins {
 	id "application"
 	id 'org.springframework.boot' version '3.2.0'
 	id 'io.spring.dependency-management' version '1.1.4'
-	id "org.graalvm.buildtools.native" version "0.9.19"
 	id 'java'
 }
 
@@ -24,20 +23,14 @@ dependencies {
 	// end::tests[]
 }
 
-
-distZip {
-	into(project.name) {
-		from 'complete'
-//		include 'conf/*'
-	}
-}
-
-installDist {
-	into(project.name) {
-		from "complete"
-//		include "conf/**"
-	}
-}
+//
+//distZip {
+//	into(project.name) {
+//		from 'complete'
+//		into project.name
+////		include 'conf/*'
+//	}
+//}
 
 test {
 	useJUnitPlatform()
